syntax = "proto3";

package sapphire.kernel.app;

option java_outer_classname = "Service";
option java_multiple_files = true;
option java_package = "sapphire.kernel.app";

service AppService {
    rpc createSapphireObject(CreateRequest) returns (CreateResponse) {}
    rpc setURL(URLRequest) returns (URLResponse) {}
    rpc deleteSapphireObject(DeleteRequest) returns (DeleteResponse) {}
    rpc acquireAppStub(AcquireRequest) returns (AcquireResponse) {}
    rpc releaseAppStub(ReleaseRequest) returns (ReleaseResponse) {}
    rpc attach(AttachRequest) returns (AttachResponse) {}
    rpc detach(DetachRequest) returns (DetachResponse) {}
    rpc genericInvoke (InvokeRequest) returns (InvokeResponse) {}
}

message CreateRequest{
    string soName = 1;
    string constructName = 2;
    bytes constructParams = 3;
    string langType = 4;
}

message CreateResponse{
    string sId = 1;
}

message URLRequest{
    string sId = 1;
    string url = 2;
}

message URLResponse{
    bool status = 1;
}

message DeleteRequest{
    string sId = 1;
}

message DeleteResponse{
    bool status = 1;
}

message AcquireRequest{
    string sId = 1;
    string dmClientRmiEndPoint = 2;
}

message AcquireResponse{
    bytes objectStream = 1;
    string clientId = 2;
}

message ReleaseRequest{
    string sId = 1;
    string clientId = 2;
}

message ReleaseResponse{
    bool status = 1;
}

message AttachRequest{
    string url = 1;
    string dmClientRmiEndPoint = 2;
}

message AttachResponse{
    bytes objectStream = 1;
    string sId = 2;
    string clientId = 3;
}

message DetachRequest{
    string sId = 1;
    string clientId = 2;
}

message DetachResponse{
    bool status = 1;
}

message InvokeRequest {
    string DMClientId = 1;
    string funcName = 2;
    bytes funcParams = 3;
}

message InvokeResponse {
    bytes objectStream = 1;
}